reference/5.1/Microsoft.PowerShell.Utility/Microsoft.PowerShell.Utility.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=390787
Help Version: 5.2.0.0
keywords: powershell,cmdlet
Locale: en-US
Module Guid: 1da87e53-152b-403e-98dc-74d7b4d63d59
Module Name: Microsoft.PowerShell.Utility
ms.date: 06/09/2017
schema: 2.0.0
title: Microsoft.PowerShell.Utility
ms.openlocfilehash: 8599ac6b6d6449e72eb76156cbe34de469fcfa1e
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: de-DE
ms.lasthandoff: 10/07/2020
ms.locfileid: "93220199"
---
# <span data-ttu-id="8bbd4-103">Microsoft.PowerShell.Utility-Modul</span><span class="sxs-lookup"><span data-stu-id="8bbd4-103">Microsoft.PowerShell.Utility Module</span></span>

## <span data-ttu-id="8bbd4-104">BESCHREIBUNG</span><span class="sxs-lookup"><span data-stu-id="8bbd4-104">Description</span></span>

<span data-ttu-id="8bbd4-105">Dieser Abschnitt enthält die Hilfe Themen für die Cmdlets, die mit dem Microsoft. PowerShell. Utility-Modul installiert werden.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-105">This section contains the help topics for the cmdlets that are installed with the Microsoft.PowerShell.Utility module.</span></span> <span data-ttu-id="8bbd4-106">Dieses Modul enthält Cmdlets, die die grundlegenden Features von PowerShell verwalten.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-106">This module contains cmdlets that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="8bbd4-107">Microsoft. PowerShell. Utility-Cmdlets</span><span class="sxs-lookup"><span data-stu-id="8bbd4-107">Microsoft.PowerShell.Utility Cmdlets</span></span>

### [<span data-ttu-id="8bbd4-108">Add-Member</span><span class="sxs-lookup"><span data-stu-id="8bbd4-108">Add-Member</span></span>](Add-Member.md)
<span data-ttu-id="8bbd4-109">Fügt einer Instanz eines PowerShell-Objekts benutzerdefinierte Eigenschaften und Methoden hinzu.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-109">Adds custom properties and methods to an instance of a PowerShell object.</span></span>

### [<span data-ttu-id="8bbd4-110">Add-Type</span><span class="sxs-lookup"><span data-stu-id="8bbd4-110">Add-Type</span></span>](Add-Type.md)
<span data-ttu-id="8bbd4-111">Fügt einer PowerShell-Sitzung eine Microsoft .NET Framework-Klasse hinzu.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-111">Adds a Microsoft .NET Framework class to a PowerShell session.</span></span>

### [<span data-ttu-id="8bbd4-112">Clear-Variable</span><span class="sxs-lookup"><span data-stu-id="8bbd4-112">Clear-Variable</span></span>](Clear-Variable.md)
<span data-ttu-id="8bbd4-113">Löscht den Wert einer Variablen.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-113">Deletes the value of a variable.</span></span>

### [<span data-ttu-id="8bbd4-114">Compare-Object</span><span class="sxs-lookup"><span data-stu-id="8bbd4-114">Compare-Object</span></span>](Compare-Object.md)
<span data-ttu-id="8bbd4-115">Vergleicht zwei Sätze von Objekten.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-115">Compares two sets of objects.</span></span>

### [<span data-ttu-id="8bbd4-116">Convert-String</span><span class="sxs-lookup"><span data-stu-id="8bbd4-116">Convert-String</span></span>](Convert-String.md)
<span data-ttu-id="8bbd4-117">Formatiert eine Zeichenfolge, um Beispiele zu vergleichen.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-117">Formats a string to match examples.</span></span>

### [<span data-ttu-id="8bbd4-118">ConvertFrom-Csv</span><span class="sxs-lookup"><span data-stu-id="8bbd4-118">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)
<span data-ttu-id="8bbd4-119">Konvertiert Objekteigenschaften im durch Trennzeichen getrennten (CSV-)Format in CSV-Versionen der ursprünglichen Objekte.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-119">Converts object properties in comma-separated value (CSV) format into CSV versions of the original objects.</span></span>

### [<span data-ttu-id="8bbd4-120">ConvertFrom-Json</span><span class="sxs-lookup"><span data-stu-id="8bbd4-120">ConvertFrom-Json</span></span>](ConvertFrom-Json.md)
<span data-ttu-id="8bbd4-121">Konvertiert eine JSON-formatierte Zeichenfolge in ein benutzerdefiniertes Objekt.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-121">Converts a JSON-formatted string to a custom object.</span></span>

### [<span data-ttu-id="8bbd4-122">ConvertFrom-SddlString</span><span class="sxs-lookup"><span data-stu-id="8bbd4-122">ConvertFrom-SddlString</span></span>](ConvertFrom-SddlString.md)
<span data-ttu-id="8bbd4-123">Konvertiert eine SDDL-Zeichenfolge in ein benutzerdefiniertes-Objekt.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-123">Converts a SDDL string to a custom object.</span></span>

### [<span data-ttu-id="8bbd4-124">ConvertFrom-String</span><span class="sxs-lookup"><span data-stu-id="8bbd4-124">ConvertFrom-String</span></span>](ConvertFrom-String.md)
<span data-ttu-id="8bbd4-125">Extrahiert und analysiert strukturierte Eigenschaften aus dem Zeichen folgen Inhalt.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-125">Extracts and parses structured properties from string content.</span></span>

### [<span data-ttu-id="8bbd4-126">ConvertFrom-StringData</span><span class="sxs-lookup"><span data-stu-id="8bbd4-126">ConvertFrom-StringData</span></span>](ConvertFrom-StringData.md)
<span data-ttu-id="8bbd4-127">Konvertiert eine Zeichenfolge, die mindestens ein Schlüssel-Wert-Paar enthält, in eine Hashtabelle.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-127">Converts a string containing one or more key and value pairs to a hash table.</span></span>

### [<span data-ttu-id="8bbd4-128">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="8bbd4-128">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)
<span data-ttu-id="8bbd4-129">Konvertiert .NET-Objekte in eine Reihe von CSV-Zeichen folgen (Comma-Separated Value, Komma getrennte Werte).</span><span class="sxs-lookup"><span data-stu-id="8bbd4-129">Converts .NET objects into a series of comma-separated value (CSV) strings.</span></span>

### [<span data-ttu-id="8bbd4-130">ConvertTo-Html</span><span class="sxs-lookup"><span data-stu-id="8bbd4-130">ConvertTo-Html</span></span>](ConvertTo-Html.md)
<span data-ttu-id="8bbd4-131">Konvertiert .NET-Objekte in HTML, die in einem Webbrowser angezeigt werden kann.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-131">Converts .NET objects into HTML that can be displayed in a Web browser.</span></span>

### [<span data-ttu-id="8bbd4-132">ConvertTo-Json</span><span class="sxs-lookup"><span data-stu-id="8bbd4-132">ConvertTo-Json</span></span>](ConvertTo-Json.md)
<span data-ttu-id="8bbd4-133">Konvertiert ein Objekt in eine JSON-formatierte Zeichenfolge.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-133">Converts an object to a JSON-formatted string.</span></span>

### [<span data-ttu-id="8bbd4-134">ConvertTo-Xml</span><span class="sxs-lookup"><span data-stu-id="8bbd4-134">ConvertTo-Xml</span></span>](ConvertTo-Xml.md)
<span data-ttu-id="8bbd4-135">Erstellt eine XML-basierte Darstellung eines Objekts.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-135">Creates an XML-based representation of an object.</span></span>

### [<span data-ttu-id="8bbd4-136">Debug-Runspace</span><span class="sxs-lookup"><span data-stu-id="8bbd4-136">Debug-Runspace</span></span>](Debug-Runspace.md)
<span data-ttu-id="8bbd4-137">Startet eine interaktive Debugsitzung mit einem Runspace.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-137">Starts an interactive debugging session with a runspace.</span></span>

### [<span data-ttu-id="8bbd4-138">Disable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="8bbd4-138">Disable-PSBreakpoint</span></span>](Disable-PSBreakpoint.md)
<span data-ttu-id="8bbd4-139">Deaktiviert die Haltepunkte in der aktuellen Konsole.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-139">Disables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="8bbd4-140">Disable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="8bbd4-140">Disable-RunspaceDebug</span></span>](Disable-RunspaceDebug.md)
<span data-ttu-id="8bbd4-141">Deaktiviert das Debuggen in einem oder mehreren Runspaces und gibt alle ausstehenden Debugger-Stopps frei.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-141">Disables debugging on one or more runspaces, and releases any pending debugger stop.</span></span>

### [<span data-ttu-id="8bbd4-142">Enable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="8bbd4-142">Enable-PSBreakpoint</span></span>](Enable-PSBreakpoint.md)
<span data-ttu-id="8bbd4-143">Aktiviert die Haltepunkte in der aktuellen Konsole.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-143">Enables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="8bbd4-144">Enable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="8bbd4-144">Enable-RunspaceDebug</span></span>](Enable-RunspaceDebug.md)
<span data-ttu-id="8bbd4-145">Aktiviert das Debuggen in Runspaces, wo ein Haltepunkt beibehalten wird, bis ein Debugger angefügt wird.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-145">Enables debugging on runspaces where any breakpoint is preserved until a debugger is attached.</span></span>

### [<span data-ttu-id="8bbd4-146">Export-Alias</span><span class="sxs-lookup"><span data-stu-id="8bbd4-146">Export-Alias</span></span>](Export-Alias.md)
<span data-ttu-id="8bbd4-147">Exportiert Informationen zu aktuell definierten Aliasen in eine Datei.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-147">Exports information about currently defined aliases to a file.</span></span>

### [<span data-ttu-id="8bbd4-148">Export-Clixml</span><span class="sxs-lookup"><span data-stu-id="8bbd4-148">Export-Clixml</span></span>](Export-Clixml.md)
<span data-ttu-id="8bbd4-149">Erstellt eine XML-basierte Darstellung eines Objekts oder von Objekten und speichert sie in einer Datei.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-149">Creates an XML-based representation of an object or objects and stores it in a file.</span></span>

### [<span data-ttu-id="8bbd4-150">Export-Csv</span><span class="sxs-lookup"><span data-stu-id="8bbd4-150">Export-Csv</span></span>](Export-Csv.md)
<span data-ttu-id="8bbd4-151">Konvertiert-Objekte in eine Reihe von CSV-Zeichen folgen (Comma-Separated Value, Komma getrennte Werte) und speichert die Zeichen folgen in einer Datei.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-151">Converts objects into a series of comma-separated value (CSV) strings and saves the strings to a file.</span></span>

### [<span data-ttu-id="8bbd4-152">Export-FormatData</span><span class="sxs-lookup"><span data-stu-id="8bbd4-152">Export-FormatData</span></span>](Export-FormatData.md)
<span data-ttu-id="8bbd4-153">Speichert Formatierungsdaten aus der aktuellen Sitzung in einer Formatierungsdatei.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-153">Saves formatting data from the current session in a formatting file.</span></span>

### [<span data-ttu-id="8bbd4-154">Export-PSSession</span><span class="sxs-lookup"><span data-stu-id="8bbd4-154">Export-PSSession</span></span>](Export-PSSession.md)
<span data-ttu-id="8bbd4-155">Exportiert Befehle aus einer anderen Sitzung und speichert Sie in einem PowerShell-Modul.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-155">Exports commands from another session and saves them in a PowerShell module.</span></span>

### [<span data-ttu-id="8bbd4-156">Format-Custom</span><span class="sxs-lookup"><span data-stu-id="8bbd4-156">Format-Custom</span></span>](Format-Custom.md)
<span data-ttu-id="8bbd4-157">Verwendet eine benutzerdefinierte Ansicht zur Formatierung der Ausgabe.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-157">Uses a customized view to format the output.</span></span>

### [<span data-ttu-id="8bbd4-158">Format-Hex</span><span class="sxs-lookup"><span data-stu-id="8bbd4-158">Format-Hex</span></span>](Format-Hex.md)
<span data-ttu-id="8bbd4-159">Zeigt eine Datei oder eine andere Eingabe als hexadezimal an.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-159">Displays a file or other input as hexadecimal.</span></span>

### [<span data-ttu-id="8bbd4-160">Format-List</span><span class="sxs-lookup"><span data-stu-id="8bbd4-160">Format-List</span></span>](Format-List.md)
<span data-ttu-id="8bbd4-161">Formatiert die Ausgabe als eine Liste der Eigenschaften, in der jede Eigenschaft in einer neuen Zeile angezeigt wird.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-161">Formats the output as a list of properties in which each property appears on a new line.</span></span>

### [<span data-ttu-id="8bbd4-162">Format-Table</span><span class="sxs-lookup"><span data-stu-id="8bbd4-162">Format-Table</span></span>](Format-Table.md)
<span data-ttu-id="8bbd4-163">Formatiert die Ausgabe als Tabelle.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-163">Formats the output as a table.</span></span>

### [<span data-ttu-id="8bbd4-164">Format-Wide</span><span class="sxs-lookup"><span data-stu-id="8bbd4-164">Format-Wide</span></span>](Format-Wide.md)
<span data-ttu-id="8bbd4-165">Formatiert Objekte als eine große Tabelle, in der nur eine Eigenschaft pro Objekt angezeigt wird.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-165">Formats objects as a wide table that displays only one property of each object.</span></span>

### [<span data-ttu-id="8bbd4-166">Get-Alias</span><span class="sxs-lookup"><span data-stu-id="8bbd4-166">Get-Alias</span></span>](Get-Alias.md)
<span data-ttu-id="8bbd4-167">Ruft die Aliase für die aktuelle Sitzung ab.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-167">Gets the aliases for the current session.</span></span>

### [<span data-ttu-id="8bbd4-168">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="8bbd4-168">Get-Culture</span></span>](Get-Culture.md)
<span data-ttu-id="8bbd4-169">Ruft die aktuelle im Betriebssystem festgelegte Kultur ab.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-169">Gets the current culture set in the operating system.</span></span>

### [<span data-ttu-id="8bbd4-170">Get-Date</span><span class="sxs-lookup"><span data-stu-id="8bbd4-170">Get-Date</span></span>](Get-Date.md)
<span data-ttu-id="8bbd4-171">Ruft das aktuelle Datum und die Uhrzeit ab.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-171">Gets the current date and time.</span></span>

### [<span data-ttu-id="8bbd4-172">Get-Event</span><span class="sxs-lookup"><span data-stu-id="8bbd4-172">Get-Event</span></span>](Get-Event.md)
<span data-ttu-id="8bbd4-173">Ruft die Ereignisse in der Ereigniswarteschlange ab.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-173">Gets the events in the event queue.</span></span>

### [<span data-ttu-id="8bbd4-174">Get-EventSubscriber</span><span class="sxs-lookup"><span data-stu-id="8bbd4-174">Get-EventSubscriber</span></span>](Get-EventSubscriber.md)
<span data-ttu-id="8bbd4-175">Ruft die Ereignisabonnenten in der aktuellen Sitzung ab.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-175">Gets the event subscribers in the current session.</span></span>

### [<span data-ttu-id="8bbd4-176">Get-FileHash</span><span class="sxs-lookup"><span data-stu-id="8bbd4-176">Get-FileHash</span></span>](Get-FileHash.md)
<span data-ttu-id="8bbd4-177">Berechnet den Hashwert für eine Datei mit einem angegebenen Hashalgorithmus.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-177">Computes the hash value for a file by using a specified hash algorithm.</span></span>

### [<span data-ttu-id="8bbd4-178">Get-FormatData</span><span class="sxs-lookup"><span data-stu-id="8bbd4-178">Get-FormatData</span></span>](Get-FormatData.md)
<span data-ttu-id="8bbd4-179">Ruft die Formatierungsdaten in der aktuellen Sitzung ab.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-179">Gets the formatting data in the current session.</span></span>

### [<span data-ttu-id="8bbd4-180">Get-Host</span><span class="sxs-lookup"><span data-stu-id="8bbd4-180">Get-Host</span></span>](Get-Host.md)
<span data-ttu-id="8bbd4-181">Ruft ein Objekt ab, das das aktuelle Hostprogramm darstellt.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-181">Gets an object that represents the current host program.</span></span>

### [<span data-ttu-id="8bbd4-182">Get-Member</span><span class="sxs-lookup"><span data-stu-id="8bbd4-182">Get-Member</span></span>](Get-Member.md)
<span data-ttu-id="8bbd4-183">Ruft die Eigenschaften und Methoden der Objekte ab.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-183">Gets the properties and methods of objects.</span></span>

### [<span data-ttu-id="8bbd4-184">Get-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="8bbd4-184">Get-PSBreakpoint</span></span>](Get-PSBreakpoint.md)
<span data-ttu-id="8bbd4-185">Ruft die Haltepunkte ab, die in der aktuellen Sitzung festgelegt sind.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-185">Gets the breakpoints that are set in the current session.</span></span>

### [<span data-ttu-id="8bbd4-186">Get-PSCallStack</span><span class="sxs-lookup"><span data-stu-id="8bbd4-186">Get-PSCallStack</span></span>](Get-PSCallStack.md)
<span data-ttu-id="8bbd4-187">Zeigt die aktuelle Aufrufliste an.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-187">Displays the current call stack.</span></span>

### [<span data-ttu-id="8bbd4-188">Get-Random</span><span class="sxs-lookup"><span data-stu-id="8bbd4-188">Get-Random</span></span>](Get-Random.md)
<span data-ttu-id="8bbd4-189">Ruft eine Zufallszahl ab oder wählt Objekte nach dem Zufallsprinzip aus einer Auflistung aus.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-189">Gets a random number, or selects objects randomly from a collection.</span></span>

### [<span data-ttu-id="8bbd4-190">Get-Runspace</span><span class="sxs-lookup"><span data-stu-id="8bbd4-190">Get-Runspace</span></span>](Get-Runspace.md)
<span data-ttu-id="8bbd4-191">Ruft aktive Runspaces in einem PowerShell-Host Prozess ab.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-191">Gets active runspaces within a PowerShell host process.</span></span>

### [<span data-ttu-id="8bbd4-192">Get-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="8bbd4-192">Get-RunspaceDebug</span></span>](Get-RunspaceDebug.md)
<span data-ttu-id="8bbd4-193">Zeigt die Runspace-Debugoptionen an.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-193">Shows runspace debugging options.</span></span>

### [<span data-ttu-id="8bbd4-194">Get-TraceSource</span><span class="sxs-lookup"><span data-stu-id="8bbd4-194">Get-TraceSource</span></span>](Get-TraceSource.md)
<span data-ttu-id="8bbd4-195">Ruft PowerShell-Komponenten ab, die für die Ablauf Verfolgung instrumentiert werden.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-195">Gets PowerShell components that are instrumented for tracing.</span></span>

### [<span data-ttu-id="8bbd4-196">Get-TypeData</span><span class="sxs-lookup"><span data-stu-id="8bbd4-196">Get-TypeData</span></span>](Get-TypeData.md)
<span data-ttu-id="8bbd4-197">Ruft die erweiterten Typdaten in der aktuellen Sitzung ab.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-197">Gets the extended type data in the current session.</span></span>

### [<span data-ttu-id="8bbd4-198">Get-UICulture</span><span class="sxs-lookup"><span data-stu-id="8bbd4-198">Get-UICulture</span></span>](Get-UICulture.md)
<span data-ttu-id="8bbd4-199">Ruft die aktuellen Einstellungen der Benutzeroberflächen Kultur im Betriebssystem ab.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-199">Gets the current UI culture settings in the operating system.</span></span>

### [<span data-ttu-id="8bbd4-200">Get-Unique</span><span class="sxs-lookup"><span data-stu-id="8bbd4-200">Get-Unique</span></span>](Get-Unique.md)
<span data-ttu-id="8bbd4-201">Gibt eindeutige Elemente aus einer sortierten Liste zurück.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-201">Returns unique items from a sorted list.</span></span>

### [<span data-ttu-id="8bbd4-202">Get-Variable</span><span class="sxs-lookup"><span data-stu-id="8bbd4-202">Get-Variable</span></span>](Get-Variable.md)
<span data-ttu-id="8bbd4-203">Ruft die Variablen in der aktuellen Konsole ab.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-203">Gets the variables in the current console.</span></span>

### [<span data-ttu-id="8bbd4-204">Get-Verb</span><span class="sxs-lookup"><span data-stu-id="8bbd4-204">Get-Verb</span></span>](Get-Verb.md)
<span data-ttu-id="8bbd4-205">Ruft genehmigte PowerShell-Verben ab.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-205">Gets approved PowerShell verbs.</span></span>

### [<span data-ttu-id="8bbd4-206">Group-Object</span><span class="sxs-lookup"><span data-stu-id="8bbd4-206">Group-Object</span></span>](Group-Object.md)
<span data-ttu-id="8bbd4-207">Gruppiert Objekte, die den gleichen Wert für die angegebenen Eigenschaften enthalten.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-207">Groups objects that contain the same value for specified properties.</span></span>

### [<span data-ttu-id="8bbd4-208">Import-Alias</span><span class="sxs-lookup"><span data-stu-id="8bbd4-208">Import-Alias</span></span>](Import-Alias.md)
<span data-ttu-id="8bbd4-209">Importiert eine Aliasliste aus einer Datei.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-209">Imports an alias list from a file.</span></span>

### [<span data-ttu-id="8bbd4-210">Import-Clixml</span><span class="sxs-lookup"><span data-stu-id="8bbd4-210">Import-Clixml</span></span>](Import-Clixml.md)
<span data-ttu-id="8bbd4-211">Importiert eine CliXML-Datei und erstellt entsprechende Objekte in PowerShell.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-211">Imports a CLIXML file and creates corresponding objects in PowerShell.</span></span>

### [<span data-ttu-id="8bbd4-212">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="8bbd4-212">Import-Csv</span></span>](Import-Csv.md)
<span data-ttu-id="8bbd4-213">Erstellt Tabellen ähnliche benutzerdefinierte Objekte aus den Elementen in einer CSV-Datei (Comma-Separated Value, Komma getrennte Werte).</span><span class="sxs-lookup"><span data-stu-id="8bbd4-213">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

### [<span data-ttu-id="8bbd4-214">Import-LocalizedData</span><span class="sxs-lookup"><span data-stu-id="8bbd4-214">Import-LocalizedData</span></span>](Import-LocalizedData.md)
<span data-ttu-id="8bbd4-215">Importiert sprachspezifische Daten in Skripts und Funktionen, basierend auf der Benutzeroberflächenkultur, die für das Betriebssystem ausgewählt ist.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-215">Imports language-specific data into scripts and functions based on the UI culture that is selected for the operating system.</span></span>

### [<span data-ttu-id="8bbd4-216">Import-PowerShellDataFile</span><span class="sxs-lookup"><span data-stu-id="8bbd4-216">Import-PowerShellDataFile</span></span>](Import-PowerShellDataFile.md)
<span data-ttu-id="8bbd4-217">Importiert Werte aus einem. Datei PSD1, ohne ihren Inhalt aufzurufen</span><span class="sxs-lookup"><span data-stu-id="8bbd4-217">Imports values from a .PSD1 file without invoking its contents</span></span>

### [<span data-ttu-id="8bbd4-218">Import-PSSession</span><span class="sxs-lookup"><span data-stu-id="8bbd4-218">Import-PSSession</span></span>](Import-PSSession.md)
<span data-ttu-id="8bbd4-219">Importiert Befehle aus einer anderen Sitzung in die aktuelle Sitzung.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-219">Imports commands from another session into the current session.</span></span>

### [<span data-ttu-id="8bbd4-220">Invoke-Expression</span><span class="sxs-lookup"><span data-stu-id="8bbd4-220">Invoke-Expression</span></span>](Invoke-Expression.md)
<span data-ttu-id="8bbd4-221">Führt Befehle oder Ausdrücke auf dem lokalen Computer aus.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-221">Runs commands or expressions on the local computer.</span></span>

### [<span data-ttu-id="8bbd4-222">Invoke-RestMethod</span><span class="sxs-lookup"><span data-stu-id="8bbd4-222">Invoke-RestMethod</span></span>](Invoke-RestMethod.md)
<span data-ttu-id="8bbd4-223">Sendet eine HTTP- oder HTTPS-Anforderung an einen RESTful-Webdienst.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-223">Sends an HTTP or HTTPS request to a RESTful web service.</span></span>

### [<span data-ttu-id="8bbd4-224">Invoke-WebRequest</span><span class="sxs-lookup"><span data-stu-id="8bbd4-224">Invoke-WebRequest</span></span>](Invoke-WebRequest.md)
<span data-ttu-id="8bbd4-225">Ruft Inhalte von einer Webseite im Internet ab.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-225">Gets content from a web page on the Internet.</span></span>

### [<span data-ttu-id="8bbd4-226">Measure-Command</span><span class="sxs-lookup"><span data-stu-id="8bbd4-226">Measure-Command</span></span>](Measure-Command.md)
<span data-ttu-id="8bbd4-227">Misst die Ausführungszeit von Skriptblöcken und Cmdlets.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-227">Measures the time it takes to run script blocks and cmdlets.</span></span>

### [<span data-ttu-id="8bbd4-228">Measure-Object</span><span class="sxs-lookup"><span data-stu-id="8bbd4-228">Measure-Object</span></span>](Measure-Object.md)
<span data-ttu-id="8bbd4-229">Berechnet die numerischen Eigenschaften von Objekten und die Zeichen, Wörter und Zeilen in Zeichenfolgenobjekten, z. B. Textdateien.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-229">Calculates the numeric properties of objects, and the characters, words, and lines in string objects, such as files of text.</span></span>

### [<span data-ttu-id="8bbd4-230">New-Alias</span><span class="sxs-lookup"><span data-stu-id="8bbd4-230">New-Alias</span></span>](New-Alias.md)
<span data-ttu-id="8bbd4-231">Erstellt einen neuen Alias.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-231">Creates a new alias.</span></span>

### [<span data-ttu-id="8bbd4-232">New-Event</span><span class="sxs-lookup"><span data-stu-id="8bbd4-232">New-Event</span></span>](New-Event.md)
<span data-ttu-id="8bbd4-233">Erstellt ein neues Ereignis.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-233">Creates a new event.</span></span>

### [<span data-ttu-id="8bbd4-234">New-GUID</span><span class="sxs-lookup"><span data-stu-id="8bbd4-234">New-Guid</span></span>](New-Guid.md)
<span data-ttu-id="8bbd4-235">Erstellt eine GUID.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-235">Creates a GUID.</span></span>

### [<span data-ttu-id="8bbd4-236">New-Object</span><span class="sxs-lookup"><span data-stu-id="8bbd4-236">New-Object</span></span>](New-Object.md)
<span data-ttu-id="8bbd4-237">Erstellt eine Instanz eines Microsoft .NET Framework- oder COM-Objekts.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-237">Creates an instance of a Microsoft .NET Framework or COM object.</span></span>

### [<span data-ttu-id="8bbd4-238">New-TemporaryFile</span><span class="sxs-lookup"><span data-stu-id="8bbd4-238">New-TemporaryFile</span></span>](New-TemporaryFile.md)
<span data-ttu-id="8bbd4-239">Erstellt eine temporäre Datei.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-239">Creates a temporary file.</span></span>

### [<span data-ttu-id="8bbd4-240">New-TimeSpan</span><span class="sxs-lookup"><span data-stu-id="8bbd4-240">New-TimeSpan</span></span>](New-TimeSpan.md)
<span data-ttu-id="8bbd4-241">Erstellt ein TimeSpan-Objekt.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-241">Creates a TimeSpan object.</span></span>

### [<span data-ttu-id="8bbd4-242">New-Variable</span><span class="sxs-lookup"><span data-stu-id="8bbd4-242">New-Variable</span></span>](New-Variable.md)
<span data-ttu-id="8bbd4-243">Erstellt eine neue Variable.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-243">Creates a new variable.</span></span>

### [<span data-ttu-id="8bbd4-244">Out-File</span><span class="sxs-lookup"><span data-stu-id="8bbd4-244">Out-File</span></span>](Out-File.md)
<span data-ttu-id="8bbd4-245">Sendet die Ausgabe an eine Datei.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-245">Sends output to a file.</span></span>

### [<span data-ttu-id="8bbd4-246">Out-GridView</span><span class="sxs-lookup"><span data-stu-id="8bbd4-246">Out-GridView</span></span>](Out-GridView.md)
<span data-ttu-id="8bbd4-247">Sendet die Ausgabe an eine interaktive Tabelle in einem separaten Fenster.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-247">Sends output to an interactive table in a separate window.</span></span>

### [<span data-ttu-id="8bbd4-248">Out-Printer</span><span class="sxs-lookup"><span data-stu-id="8bbd4-248">Out-Printer</span></span>](Out-Printer.md)
<span data-ttu-id="8bbd4-249">Sendet die Ausgabe an einen Drucker.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-249">Sends output to a printer.</span></span>

### [<span data-ttu-id="8bbd4-250">Out-String</span><span class="sxs-lookup"><span data-stu-id="8bbd4-250">Out-String</span></span>](Out-String.md)
<span data-ttu-id="8bbd4-251">Gibt Eingabe Objekte als Zeichen folgen aus.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-251">Outputs input objects as a strings.</span></span>

### [<span data-ttu-id="8bbd4-252">Read-Host</span><span class="sxs-lookup"><span data-stu-id="8bbd4-252">Read-Host</span></span>](Read-Host.md)
<span data-ttu-id="8bbd4-253">Liest eine Zeile von Eingabedaten aus der Konsole.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-253">Reads a line of input from the console.</span></span>

### [<span data-ttu-id="8bbd4-254">Register-EngineEvent</span><span class="sxs-lookup"><span data-stu-id="8bbd4-254">Register-EngineEvent</span></span>](Register-EngineEvent.md)
<span data-ttu-id="8bbd4-255">Abonniert Ereignisse, die von der PowerShell-Engine und vom `New-Event` Cmdlet generiert werden.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-255">Subscribes to events that are generated by the PowerShell engine and by the `New-Event` cmdlet.</span></span>

### [<span data-ttu-id="8bbd4-256">Register-ObjectEvent</span><span class="sxs-lookup"><span data-stu-id="8bbd4-256">Register-ObjectEvent</span></span>](Register-ObjectEvent.md)
<span data-ttu-id="8bbd4-257">Abonniert die Ereignisse, die von einem Microsoft .NET Framework-Objekt generiert werden.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-257">Subscribes to the events that are generated by a Microsoft .NET Framework object.</span></span>

### [<span data-ttu-id="8bbd4-258">Remove-Event</span><span class="sxs-lookup"><span data-stu-id="8bbd4-258">Remove-Event</span></span>](Remove-Event.md)
<span data-ttu-id="8bbd4-259">Löscht Ereignisse aus der Ereigniswarteschlange.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-259">Deletes events from the event queue.</span></span>

### [<span data-ttu-id="8bbd4-260">Remove-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="8bbd4-260">Remove-PSBreakpoint</span></span>](Remove-PSBreakpoint.md)
<span data-ttu-id="8bbd4-261">Löscht Haltepunkte aus der aktuellen Konsole.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-261">Deletes breakpoints from the current console.</span></span>

### [<span data-ttu-id="8bbd4-262">Remove-TypeData</span><span class="sxs-lookup"><span data-stu-id="8bbd4-262">Remove-TypeData</span></span>](Remove-TypeData.md)
<span data-ttu-id="8bbd4-263">Löscht erweiterte Typen aus der aktuellen Sitzung.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-263">Deletes extended types from the current session.</span></span>

### [<span data-ttu-id="8bbd4-264">Remove-Variable</span><span class="sxs-lookup"><span data-stu-id="8bbd4-264">Remove-Variable</span></span>](Remove-Variable.md)
<span data-ttu-id="8bbd4-265">Löscht eine Variable und ihren Wert.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-265">Deletes a variable and its value.</span></span>

### [<span data-ttu-id="8bbd4-266">Select-Object</span><span class="sxs-lookup"><span data-stu-id="8bbd4-266">Select-Object</span></span>](Select-Object.md)
<span data-ttu-id="8bbd4-267">Wählt Objekte oder Objekteigenschaften.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-267">Selects objects or object properties.</span></span>

### [<span data-ttu-id="8bbd4-268">Select-String</span><span class="sxs-lookup"><span data-stu-id="8bbd4-268">Select-String</span></span>](Select-String.md)
<span data-ttu-id="8bbd4-269">Sucht nach Text in Dateien und Zeichenfolgen.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-269">Finds text in strings and files.</span></span>

### [<span data-ttu-id="8bbd4-270">Select-Xml</span><span class="sxs-lookup"><span data-stu-id="8bbd4-270">Select-Xml</span></span>](Select-Xml.md)
<span data-ttu-id="8bbd4-271">Sucht Text in einer XML-Zeichenfolge oder einem XML-Dokument.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-271">Finds text in an XML string or document.</span></span>

### [<span data-ttu-id="8bbd4-272">Send-MailMessage</span><span class="sxs-lookup"><span data-stu-id="8bbd4-272">Send-MailMessage</span></span>](Send-MailMessage.md)
<span data-ttu-id="8bbd4-273">Sendet eine E-Mail.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-273">Sends an email message.</span></span>

### [<span data-ttu-id="8bbd4-274">Set-Alias</span><span class="sxs-lookup"><span data-stu-id="8bbd4-274">Set-Alias</span></span>](Set-Alias.md)
<span data-ttu-id="8bbd4-275">Erstellt oder ändert einen Alias für ein Cmdlet oder einen anderen Befehl in der aktuellen PowerShell-Sitzung.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-275">Creates or changes an alias for a cmdlet or other command in the current PowerShell session.</span></span>

### [<span data-ttu-id="8bbd4-276">Set-Date</span><span class="sxs-lookup"><span data-stu-id="8bbd4-276">Set-Date</span></span>](Set-Date.md)
<span data-ttu-id="8bbd4-277">Ändert die Systemzeit auf dem Computer in eine von Ihnen angegebene Uhrzeit.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-277">Changes the system time on the computer to a time that you specify.</span></span>

### [<span data-ttu-id="8bbd4-278">Set-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="8bbd4-278">Set-PSBreakpoint</span></span>](Set-PSBreakpoint.md)
<span data-ttu-id="8bbd4-279">Legt einen Haltepunkt in einer Zeile, einem Befehl oder einer Variable fest.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-279">Sets a breakpoint on a line, command, or variable.</span></span>

### [<span data-ttu-id="8bbd4-280">Set-TraceSource</span><span class="sxs-lookup"><span data-stu-id="8bbd4-280">Set-TraceSource</span></span>](Set-TraceSource.md)
<span data-ttu-id="8bbd4-281">Konfiguriert, startet und beendet eine Ablauf Verfolgung von PowerShell-Komponenten.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-281">Configures, starts, and stops a trace of PowerShell components.</span></span>

### [<span data-ttu-id="8bbd4-282">Set-Variable</span><span class="sxs-lookup"><span data-stu-id="8bbd4-282">Set-Variable</span></span>](Set-Variable.md)
<span data-ttu-id="8bbd4-283">Legt den Wert einer Variablen fest.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-283">Sets the value of a variable.</span></span>

### [<span data-ttu-id="8bbd4-284">Show-Command</span><span class="sxs-lookup"><span data-stu-id="8bbd4-284">Show-Command</span></span>](Show-Command.md)
<span data-ttu-id="8bbd4-285">Zeigt PowerShell-Befehls Informationen in einem grafischen Fenster an.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-285">Displays PowerShell command information in a graphical window.</span></span>

### [<span data-ttu-id="8bbd4-286">Sort-Object</span><span class="sxs-lookup"><span data-stu-id="8bbd4-286">Sort-Object</span></span>](Sort-Object.md)
<span data-ttu-id="8bbd4-287">Sortiert Objekte nach Eigenschaftenwerten.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-287">Sorts objects by property values.</span></span>

### [<span data-ttu-id="8bbd4-288">Start-Sleep</span><span class="sxs-lookup"><span data-stu-id="8bbd4-288">Start-Sleep</span></span>](Start-Sleep.md)
<span data-ttu-id="8bbd4-289">Hält die Aktivität in einem Skript oder einer Sitzung für den angegebenen Zeitraum an.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-289">Suspends the activity in a script or session for the specified period of time.</span></span>

### [<span data-ttu-id="8bbd4-290">Tee-Object</span><span class="sxs-lookup"><span data-stu-id="8bbd4-290">Tee-Object</span></span>](Tee-Object.md)
<span data-ttu-id="8bbd4-291">Speichert die Ausgabe des Befehls in einer Datei oder einer Variablen, und sendet sie über die Pipeline.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-291">Saves command output in a file or variable and also sends it down the pipeline.</span></span>

### [<span data-ttu-id="8bbd4-292">Trace-Command</span><span class="sxs-lookup"><span data-stu-id="8bbd4-292">Trace-Command</span></span>](Trace-Command.md)
<span data-ttu-id="8bbd4-293">Konfiguriert und startet eine Ablaufverfolgung des angegebenen Ausdrucks oder Befehls.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-293">Configures and starts a trace of the specified expression or command.</span></span>

### [<span data-ttu-id="8bbd4-294">Unblock-File</span><span class="sxs-lookup"><span data-stu-id="8bbd4-294">Unblock-File</span></span>](Unblock-File.md)
<span data-ttu-id="8bbd4-295">Hebt die Blockierung von Dateien auf, die aus dem Internet heruntergeladen wurden.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-295">Unblocks files that were downloaded from the Internet.</span></span>

### [<span data-ttu-id="8bbd4-296">Unregister-Event</span><span class="sxs-lookup"><span data-stu-id="8bbd4-296">Unregister-Event</span></span>](Unregister-Event.md)
<span data-ttu-id="8bbd4-297">Storniert ein Ereignisabonnement.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-297">Cancels an event subscription.</span></span>

### [<span data-ttu-id="8bbd4-298">Update-FormatData</span><span class="sxs-lookup"><span data-stu-id="8bbd4-298">Update-FormatData</span></span>](Update-FormatData.md)
<span data-ttu-id="8bbd4-299">Aktualisiert die Formatierungsdaten in der aktuellen Sitzung.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-299">Updates the formatting data in the current session.</span></span>

### [<span data-ttu-id="8bbd4-300">Update-List</span><span class="sxs-lookup"><span data-stu-id="8bbd4-300">Update-List</span></span>](Update-List.md)
<span data-ttu-id="8bbd4-301">Fügt Elemente einem Eigenschaftenwert hinzu, der eine Auflistung von Objekten enthält, bzw. entfernt sie daraus.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-301">Adds items to and removes items from a property value that contains a collection of objects.</span></span>

### [<span data-ttu-id="8bbd4-302">Update-TypeData</span><span class="sxs-lookup"><span data-stu-id="8bbd4-302">Update-TypeData</span></span>](Update-TypeData.md)
<span data-ttu-id="8bbd4-303">Aktualisiert die erweiterten Typdaten in der Sitzung.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-303">Updates the extended type data in the session.</span></span>

### [<span data-ttu-id="8bbd4-304">Wait-Debugger</span><span class="sxs-lookup"><span data-stu-id="8bbd4-304">Wait-Debugger</span></span>](Wait-Debugger.md)
<span data-ttu-id="8bbd4-305">Beendet ein Skript im Debugger, bevor die nächste Anweisung im Skript ausgeführt wird.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-305">Stops a script in the debugger before running the next statement in the script.</span></span>

### [<span data-ttu-id="8bbd4-306">Wait-Event</span><span class="sxs-lookup"><span data-stu-id="8bbd4-306">Wait-Event</span></span>](Wait-Event.md)
<span data-ttu-id="8bbd4-307">Wartet, bis ein bestimmtes Ereignis ausgelöst wird, bevor die Ausführung fortgesetzt wird.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-307">Waits until a particular event is raised before continuing to run.</span></span>

### [<span data-ttu-id="8bbd4-308">Write-Debug</span><span class="sxs-lookup"><span data-stu-id="8bbd4-308">Write-Debug</span></span>](Write-Debug.md)
<span data-ttu-id="8bbd4-309">Schreibt eine Debugmeldung in die Konsole.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-309">Writes a debug message to the console.</span></span>

### [<span data-ttu-id="8bbd4-310">Schreibfehler</span><span class="sxs-lookup"><span data-stu-id="8bbd4-310">Write-Error</span></span>](Write-Error.md)
<span data-ttu-id="8bbd4-311">Schreibt ein Objekt in den Fehlerdatenstrom.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-311">Writes an object to the error stream.</span></span>

### [<span data-ttu-id="8bbd4-312">Write-Host</span><span class="sxs-lookup"><span data-stu-id="8bbd4-312">Write-Host</span></span>](Write-Host.md)
<span data-ttu-id="8bbd4-313">Schreibt angepasste Ausgabe an einen Host.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-313">Writes customized output to a host.</span></span>

### [<span data-ttu-id="8bbd4-314">Write-Information</span><span class="sxs-lookup"><span data-stu-id="8bbd4-314">Write-Information</span></span>](Write-Information.md)
<span data-ttu-id="8bbd4-315">Gibt an, wie PowerShell Daten in einem Informationsdaten Strom für einen Befehl verarbeitet.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-315">Specifies how PowerShell handles information stream data for a command.</span></span>

### [<span data-ttu-id="8bbd4-316">Write-Output</span><span class="sxs-lookup"><span data-stu-id="8bbd4-316">Write-Output</span></span>](Write-Output.md)
<span data-ttu-id="8bbd4-317">Sendet die angegebenen Objekte an den nächsten Befehl in der Pipeline.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-317">Sends the specified objects to the next command in the pipeline.</span></span>

### [<span data-ttu-id="8bbd4-318">Write-Progress</span><span class="sxs-lookup"><span data-stu-id="8bbd4-318">Write-Progress</span></span>](Write-Progress.md)
<span data-ttu-id="8bbd4-319">Zeigt eine Statusanzeige in einem PowerShell-Befehlsfenster an.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-319">Displays a progress bar within a PowerShell command window.</span></span>

### [<span data-ttu-id="8bbd4-320">Write-Verbose</span><span class="sxs-lookup"><span data-stu-id="8bbd4-320">Write-Verbose</span></span>](Write-Verbose.md)
<span data-ttu-id="8bbd4-321">Schreibt Text in den Stream für ausführliche Meldungen.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-321">Writes text to the verbose message stream.</span></span>

### [<span data-ttu-id="8bbd4-322">Write-Warning</span><span class="sxs-lookup"><span data-stu-id="8bbd4-322">Write-Warning</span></span>](Write-Warning.md)
<span data-ttu-id="8bbd4-323">Schreibt eine Warnmeldung.</span><span class="sxs-lookup"><span data-stu-id="8bbd4-323">Writes a warning message.</span></span>
