reference/7.0/Microsoft.PowerShell.Utility/Microsoft.PowerShell.Utility.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=2113633
Help Version: 7.0.1.0
keywords: powershell,cmdlet
Locale: en-US
Module Guid: 1da87e53-152b-403e-98dc-74d7b4d63d59
Module Name: Microsoft.PowerShell.Utility
ms.date: 06/09/2017
schema: 2.0.0
title: Microsoft.PowerShell.Utility
ms.openlocfilehash: 6afa678e516ca3f3f6af5be87d2bb7eea628fcf5
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: de-DE
ms.lasthandoff: 10/07/2020
ms.locfileid: "93220404"
---
# <span data-ttu-id="703e6-103">Microsoft.PowerShell.Utility-Modul</span><span class="sxs-lookup"><span data-stu-id="703e6-103">Microsoft.PowerShell.Utility Module</span></span>

## <span data-ttu-id="703e6-104">BESCHREIBUNG</span><span class="sxs-lookup"><span data-stu-id="703e6-104">Description</span></span>

<span data-ttu-id="703e6-105">Dieser Abschnitt enthält die Hilfe Themen für die Cmdlets, die mit dem Microsoft. PowerShell. Utility-Modul installiert werden.</span><span class="sxs-lookup"><span data-stu-id="703e6-105">This section contains the help topics for the cmdlets that are installed with the Microsoft.PowerShell.Utility module.</span></span> <span data-ttu-id="703e6-106">Dieses Modul enthält Cmdlets, die die grundlegenden Features von PowerShell verwalten.</span><span class="sxs-lookup"><span data-stu-id="703e6-106">This module contains cmdlets that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="703e6-107">Microsoft. PowerShell. Utility-Cmdlets</span><span class="sxs-lookup"><span data-stu-id="703e6-107">Microsoft.PowerShell.Utility Cmdlets</span></span>

### [<span data-ttu-id="703e6-108">Add-Member</span><span class="sxs-lookup"><span data-stu-id="703e6-108">Add-Member</span></span>](Add-Member.md)
<span data-ttu-id="703e6-109">Fügt einer Instanz eines PowerShell-Objekts benutzerdefinierte Eigenschaften und Methoden hinzu.</span><span class="sxs-lookup"><span data-stu-id="703e6-109">Adds custom properties and methods to an instance of a PowerShell object.</span></span>

### [<span data-ttu-id="703e6-110">Add-Type</span><span class="sxs-lookup"><span data-stu-id="703e6-110">Add-Type</span></span>](Add-Type.md)
<span data-ttu-id="703e6-111">Fügt einer PowerShell-Sitzung eine Microsoft .net Core-Klasse hinzu.</span><span class="sxs-lookup"><span data-stu-id="703e6-111">Adds a Microsoft .NET Core class to a PowerShell session.</span></span>

### [<span data-ttu-id="703e6-112">Clear-Variable</span><span class="sxs-lookup"><span data-stu-id="703e6-112">Clear-Variable</span></span>](Clear-Variable.md)
<span data-ttu-id="703e6-113">Löscht den Wert einer Variablen.</span><span class="sxs-lookup"><span data-stu-id="703e6-113">Deletes the value of a variable.</span></span>

### [<span data-ttu-id="703e6-114">Compare-Object</span><span class="sxs-lookup"><span data-stu-id="703e6-114">Compare-Object</span></span>](Compare-Object.md)
<span data-ttu-id="703e6-115">Vergleicht zwei Sätze von Objekten.</span><span class="sxs-lookup"><span data-stu-id="703e6-115">Compares two sets of objects.</span></span>

### [<span data-ttu-id="703e6-116">ConvertFrom-Csv</span><span class="sxs-lookup"><span data-stu-id="703e6-116">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)
<span data-ttu-id="703e6-117">Konvertiert Objekteigenschaften im durch Trennzeichen getrennten (CSV-)Format in CSV-Versionen der ursprünglichen Objekte.</span><span class="sxs-lookup"><span data-stu-id="703e6-117">Converts object properties in comma-separated value (CSV) format into CSV versions of the original objects.</span></span>

### [<span data-ttu-id="703e6-118">ConvertFrom-Json</span><span class="sxs-lookup"><span data-stu-id="703e6-118">ConvertFrom-Json</span></span>](ConvertFrom-Json.md)
<span data-ttu-id="703e6-119">Konvertiert eine JSON-formatierte Zeichenfolge in ein benutzerdefiniertes Objekt oder eine Hash Tabelle.</span><span class="sxs-lookup"><span data-stu-id="703e6-119">Converts a JSON-formatted string to a custom object or a hash table.</span></span>

### [<span data-ttu-id="703e6-120">ConvertFrom-Markdown</span><span class="sxs-lookup"><span data-stu-id="703e6-120">ConvertFrom-Markdown</span></span>](ConvertFrom-Markdown.md)
<span data-ttu-id="703e6-121">Konvertiert den Inhalt einer Zeichenfolge oder einer Datei in ein **markdowninfo** -Objekt.</span><span class="sxs-lookup"><span data-stu-id="703e6-121">Convert the contents of a string or a file to a **MarkdownInfo** object.</span></span>

### [<span data-ttu-id="703e6-122">ConvertFrom-SddlString</span><span class="sxs-lookup"><span data-stu-id="703e6-122">ConvertFrom-SddlString</span></span>](ConvertFrom-SddlString.md)
<span data-ttu-id="703e6-123">Konvertiert eine SDDL-Zeichenfolge in ein benutzerdefiniertes-Objekt.</span><span class="sxs-lookup"><span data-stu-id="703e6-123">Converts a SDDL string to a custom object.</span></span>

### [<span data-ttu-id="703e6-124">ConvertFrom-StringData</span><span class="sxs-lookup"><span data-stu-id="703e6-124">ConvertFrom-StringData</span></span>](ConvertFrom-StringData.md)
<span data-ttu-id="703e6-125">Konvertiert eine Zeichenfolge, die mindestens ein Schlüssel-Wert-Paar enthält, in eine Hashtabelle.</span><span class="sxs-lookup"><span data-stu-id="703e6-125">Converts a string containing one or more key and value pairs to a hash table.</span></span>

### [<span data-ttu-id="703e6-126">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="703e6-126">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)
<span data-ttu-id="703e6-127">Konvertiert .NET-Objekte in eine Reihe von CSV-Zeichen folgen (Zeichen getrennte Werte).</span><span class="sxs-lookup"><span data-stu-id="703e6-127">Converts .NET objects into a series of character-separated value (CSV) strings.</span></span>

### [<span data-ttu-id="703e6-128">ConvertTo-Html</span><span class="sxs-lookup"><span data-stu-id="703e6-128">ConvertTo-Html</span></span>](ConvertTo-Html.md)
<span data-ttu-id="703e6-129">Konvertiert .NET-Objekte in HTML, die in einem Webbrowser angezeigt werden kann.</span><span class="sxs-lookup"><span data-stu-id="703e6-129">Converts .NET objects into HTML that can be displayed in a Web browser.</span></span>

### [<span data-ttu-id="703e6-130">ConvertTo-Json</span><span class="sxs-lookup"><span data-stu-id="703e6-130">ConvertTo-Json</span></span>](ConvertTo-Json.md)
<span data-ttu-id="703e6-131">Konvertiert ein Objekt in eine JSON-formatierte Zeichenfolge.</span><span class="sxs-lookup"><span data-stu-id="703e6-131">Converts an object to a JSON-formatted string.</span></span>

### [<span data-ttu-id="703e6-132">ConvertTo-Xml</span><span class="sxs-lookup"><span data-stu-id="703e6-132">ConvertTo-Xml</span></span>](ConvertTo-Xml.md)
<span data-ttu-id="703e6-133">Erstellt eine XML-basierte Darstellung eines Objekts.</span><span class="sxs-lookup"><span data-stu-id="703e6-133">Creates an XML-based representation of an object.</span></span>

### [<span data-ttu-id="703e6-134">Debug-Runspace</span><span class="sxs-lookup"><span data-stu-id="703e6-134">Debug-Runspace</span></span>](Debug-Runspace.md)
<span data-ttu-id="703e6-135">Startet eine interaktive Debugsitzung mit einem Runspace.</span><span class="sxs-lookup"><span data-stu-id="703e6-135">Starts an interactive debugging session with a runspace.</span></span>

### [<span data-ttu-id="703e6-136">Disable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="703e6-136">Disable-PSBreakpoint</span></span>](Disable-PSBreakpoint.md)
<span data-ttu-id="703e6-137">Deaktiviert die Haltepunkte in der aktuellen Konsole.</span><span class="sxs-lookup"><span data-stu-id="703e6-137">Disables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="703e6-138">Disable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="703e6-138">Disable-RunspaceDebug</span></span>](Disable-RunspaceDebug.md)
<span data-ttu-id="703e6-139">Deaktiviert das Debuggen in einem oder mehreren Runspaces und gibt alle ausstehenden Debugger-Stopps frei.</span><span class="sxs-lookup"><span data-stu-id="703e6-139">Disables debugging on one or more runspaces, and releases any pending debugger stop.</span></span>

### [<span data-ttu-id="703e6-140">Enable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="703e6-140">Enable-PSBreakpoint</span></span>](Enable-PSBreakpoint.md)
<span data-ttu-id="703e6-141">Aktiviert die Haltepunkte in der aktuellen Konsole.</span><span class="sxs-lookup"><span data-stu-id="703e6-141">Enables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="703e6-142">Enable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="703e6-142">Enable-RunspaceDebug</span></span>](Enable-RunspaceDebug.md)
<span data-ttu-id="703e6-143">Aktiviert das Debuggen in Runspaces, wo ein Haltepunkt beibehalten wird, bis ein Debugger angefügt wird.</span><span class="sxs-lookup"><span data-stu-id="703e6-143">Enables debugging on runspaces where any breakpoint is preserved until a debugger is attached.</span></span>

### [<span data-ttu-id="703e6-144">Export-Alias</span><span class="sxs-lookup"><span data-stu-id="703e6-144">Export-Alias</span></span>](Export-Alias.md)
<span data-ttu-id="703e6-145">Exportiert Informationen zu aktuell definierten Aliasen in eine Datei.</span><span class="sxs-lookup"><span data-stu-id="703e6-145">Exports information about currently defined aliases to a file.</span></span>

### [<span data-ttu-id="703e6-146">Export-Clixml</span><span class="sxs-lookup"><span data-stu-id="703e6-146">Export-Clixml</span></span>](Export-Clixml.md)
<span data-ttu-id="703e6-147">Erstellt eine XML-basierte Darstellung eines Objekts oder von Objekten und speichert sie in einer Datei.</span><span class="sxs-lookup"><span data-stu-id="703e6-147">Creates an XML-based representation of an object or objects and stores it in a file.</span></span>

### [<span data-ttu-id="703e6-148">Export-Csv</span><span class="sxs-lookup"><span data-stu-id="703e6-148">Export-Csv</span></span>](Export-Csv.md)
<span data-ttu-id="703e6-149">Konvertiert-Objekte in eine Reihe von CSV-Zeichen folgen (Comma-Separated Value, Komma getrennte Werte) und speichert die Zeichen folgen in einer Datei.</span><span class="sxs-lookup"><span data-stu-id="703e6-149">Converts objects into a series of comma-separated value (CSV) strings and saves the strings to a file.</span></span>

### [<span data-ttu-id="703e6-150">Export-FormatData</span><span class="sxs-lookup"><span data-stu-id="703e6-150">Export-FormatData</span></span>](Export-FormatData.md)
<span data-ttu-id="703e6-151">Speichert Formatierungsdaten aus der aktuellen Sitzung in einer Formatierungsdatei.</span><span class="sxs-lookup"><span data-stu-id="703e6-151">Saves formatting data from the current session in a formatting file.</span></span>

### [<span data-ttu-id="703e6-152">Export-PSSession</span><span class="sxs-lookup"><span data-stu-id="703e6-152">Export-PSSession</span></span>](Export-PSSession.md)
<span data-ttu-id="703e6-153">Exportiert Befehle aus einer anderen Sitzung und speichert Sie in einem PowerShell-Modul.</span><span class="sxs-lookup"><span data-stu-id="703e6-153">Exports commands from another session and saves them in a PowerShell module.</span></span>

### [<span data-ttu-id="703e6-154">Format-Custom</span><span class="sxs-lookup"><span data-stu-id="703e6-154">Format-Custom</span></span>](Format-Custom.md)
<span data-ttu-id="703e6-155">Verwendet eine benutzerdefinierte Ansicht zur Formatierung der Ausgabe.</span><span class="sxs-lookup"><span data-stu-id="703e6-155">Uses a customized view to format the output.</span></span>

### [<span data-ttu-id="703e6-156">Format-Hex</span><span class="sxs-lookup"><span data-stu-id="703e6-156">Format-Hex</span></span>](Format-Hex.md)
<span data-ttu-id="703e6-157">Zeigt eine Datei oder eine andere Eingabe als hexadezimal an.</span><span class="sxs-lookup"><span data-stu-id="703e6-157">Displays a file or other input as hexadecimal.</span></span>

### [<span data-ttu-id="703e6-158">Format-List</span><span class="sxs-lookup"><span data-stu-id="703e6-158">Format-List</span></span>](Format-List.md)
<span data-ttu-id="703e6-159">Formatiert die Ausgabe als eine Liste der Eigenschaften, in der jede Eigenschaft in einer neuen Zeile angezeigt wird.</span><span class="sxs-lookup"><span data-stu-id="703e6-159">Formats the output as a list of properties in which each property appears on a new line.</span></span>

### [<span data-ttu-id="703e6-160">Format-Table</span><span class="sxs-lookup"><span data-stu-id="703e6-160">Format-Table</span></span>](Format-Table.md)
<span data-ttu-id="703e6-161">Formatiert die Ausgabe als Tabelle.</span><span class="sxs-lookup"><span data-stu-id="703e6-161">Formats the output as a table.</span></span>

### [<span data-ttu-id="703e6-162">Format-Wide</span><span class="sxs-lookup"><span data-stu-id="703e6-162">Format-Wide</span></span>](Format-Wide.md)
<span data-ttu-id="703e6-163">Formatiert Objekte als eine große Tabelle, in der nur eine Eigenschaft pro Objekt angezeigt wird.</span><span class="sxs-lookup"><span data-stu-id="703e6-163">Formats objects as a wide table that displays only one property of each object.</span></span>

### [<span data-ttu-id="703e6-164">Get-Alias</span><span class="sxs-lookup"><span data-stu-id="703e6-164">Get-Alias</span></span>](Get-Alias.md)
<span data-ttu-id="703e6-165">Ruft die Aliase für die aktuelle Sitzung ab.</span><span class="sxs-lookup"><span data-stu-id="703e6-165">Gets the aliases for the current session.</span></span>

### [<span data-ttu-id="703e6-166">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="703e6-166">Get-Culture</span></span>](Get-Culture.md)
<span data-ttu-id="703e6-167">Ruft die aktuelle im Betriebssystem festgelegte Kultur ab.</span><span class="sxs-lookup"><span data-stu-id="703e6-167">Gets the current culture set in the operating system.</span></span>

### [<span data-ttu-id="703e6-168">Get-Date</span><span class="sxs-lookup"><span data-stu-id="703e6-168">Get-Date</span></span>](Get-Date.md)
<span data-ttu-id="703e6-169">Ruft das aktuelle Datum und die Uhrzeit ab.</span><span class="sxs-lookup"><span data-stu-id="703e6-169">Gets the current date and time.</span></span>

### [<span data-ttu-id="703e6-170">Get-Error</span><span class="sxs-lookup"><span data-stu-id="703e6-170">Get-Error</span></span>](Get-Error.md)
<span data-ttu-id="703e6-171">Ruft die letzten Fehlermeldungen aus der aktuellen Sitzung ab und zeigt diese an.</span><span class="sxs-lookup"><span data-stu-id="703e6-171">Gets and displays the most recent error messages from the current session.</span></span>

### [<span data-ttu-id="703e6-172">Get-Event</span><span class="sxs-lookup"><span data-stu-id="703e6-172">Get-Event</span></span>](Get-Event.md)
<span data-ttu-id="703e6-173">Ruft die Ereignisse in der Ereigniswarteschlange ab.</span><span class="sxs-lookup"><span data-stu-id="703e6-173">Gets the events in the event queue.</span></span>

### [<span data-ttu-id="703e6-174">Get-EventSubscriber</span><span class="sxs-lookup"><span data-stu-id="703e6-174">Get-EventSubscriber</span></span>](Get-EventSubscriber.md)
<span data-ttu-id="703e6-175">Ruft die Ereignisabonnenten in der aktuellen Sitzung ab.</span><span class="sxs-lookup"><span data-stu-id="703e6-175">Gets the event subscribers in the current session.</span></span>

### [<span data-ttu-id="703e6-176">Get-FileHash</span><span class="sxs-lookup"><span data-stu-id="703e6-176">Get-FileHash</span></span>](Get-FileHash.md)
<span data-ttu-id="703e6-177">Berechnet den Hashwert für eine Datei mit einem angegebenen Hashalgorithmus.</span><span class="sxs-lookup"><span data-stu-id="703e6-177">Computes the hash value for a file by using a specified hash algorithm.</span></span>

### [<span data-ttu-id="703e6-178">Get-FormatData</span><span class="sxs-lookup"><span data-stu-id="703e6-178">Get-FormatData</span></span>](Get-FormatData.md)
<span data-ttu-id="703e6-179">Ruft die Formatierungsdaten in der aktuellen Sitzung ab.</span><span class="sxs-lookup"><span data-stu-id="703e6-179">Gets the formatting data in the current session.</span></span>

### [<span data-ttu-id="703e6-180">Get-Host</span><span class="sxs-lookup"><span data-stu-id="703e6-180">Get-Host</span></span>](Get-Host.md)
<span data-ttu-id="703e6-181">Ruft ein Objekt ab, das das aktuelle Hostprogramm darstellt.</span><span class="sxs-lookup"><span data-stu-id="703e6-181">Gets an object that represents the current host program.</span></span>

### [<span data-ttu-id="703e6-182">Get-MarkdownOption</span><span class="sxs-lookup"><span data-stu-id="703e6-182">Get-MarkdownOption</span></span>](Get-MarkdownOption.md)
<span data-ttu-id="703e6-183">Gibt die aktuellen Farben und Stile zurück, die zum Rendern von markdown-Inhalten in der Konsole verwendet werden.</span><span class="sxs-lookup"><span data-stu-id="703e6-183">Returns the current colors and styles used for rendering Markdown content in the console.</span></span>

### [<span data-ttu-id="703e6-184">Get-Member</span><span class="sxs-lookup"><span data-stu-id="703e6-184">Get-Member</span></span>](Get-Member.md)
<span data-ttu-id="703e6-185">Ruft die Eigenschaften und Methoden der Objekte ab.</span><span class="sxs-lookup"><span data-stu-id="703e6-185">Gets the properties and methods of objects.</span></span>

### [<span data-ttu-id="703e6-186">Get-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="703e6-186">Get-PSBreakpoint</span></span>](Get-PSBreakpoint.md)
<span data-ttu-id="703e6-187">Ruft die Haltepunkte ab, die in der aktuellen Sitzung festgelegt sind.</span><span class="sxs-lookup"><span data-stu-id="703e6-187">Gets the breakpoints that are set in the current session.</span></span>

### [<span data-ttu-id="703e6-188">Get-PSCallStack</span><span class="sxs-lookup"><span data-stu-id="703e6-188">Get-PSCallStack</span></span>](Get-PSCallStack.md)
<span data-ttu-id="703e6-189">Zeigt die aktuelle Aufrufliste an.</span><span class="sxs-lookup"><span data-stu-id="703e6-189">Displays the current call stack.</span></span>

### [<span data-ttu-id="703e6-190">Get-Random</span><span class="sxs-lookup"><span data-stu-id="703e6-190">Get-Random</span></span>](Get-Random.md)
<span data-ttu-id="703e6-191">Ruft eine Zufallszahl ab oder wählt Objekte nach dem Zufallsprinzip aus einer Auflistung aus.</span><span class="sxs-lookup"><span data-stu-id="703e6-191">Gets a random number, or selects objects randomly from a collection.</span></span>

### [<span data-ttu-id="703e6-192">Get-Runspace</span><span class="sxs-lookup"><span data-stu-id="703e6-192">Get-Runspace</span></span>](Get-Runspace.md)
<span data-ttu-id="703e6-193">Ruft aktive Runspaces in einem PowerShell-Host Prozess ab.</span><span class="sxs-lookup"><span data-stu-id="703e6-193">Gets active runspaces within a PowerShell host process.</span></span>

### [<span data-ttu-id="703e6-194">Get-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="703e6-194">Get-RunspaceDebug</span></span>](Get-RunspaceDebug.md)
<span data-ttu-id="703e6-195">Zeigt die Runspace-Debugoptionen an.</span><span class="sxs-lookup"><span data-stu-id="703e6-195">Shows runspace debugging options.</span></span>

### [<span data-ttu-id="703e6-196">Get-TraceSource</span><span class="sxs-lookup"><span data-stu-id="703e6-196">Get-TraceSource</span></span>](Get-TraceSource.md)
<span data-ttu-id="703e6-197">Ruft PowerShell-Komponenten ab, die für die Ablauf Verfolgung instrumentiert werden.</span><span class="sxs-lookup"><span data-stu-id="703e6-197">Gets PowerShell components that are instrumented for tracing.</span></span>

### [<span data-ttu-id="703e6-198">Get-TypeData</span><span class="sxs-lookup"><span data-stu-id="703e6-198">Get-TypeData</span></span>](Get-TypeData.md)
<span data-ttu-id="703e6-199">Ruft die erweiterten Typdaten in der aktuellen Sitzung ab.</span><span class="sxs-lookup"><span data-stu-id="703e6-199">Gets the extended type data in the current session.</span></span>

### [<span data-ttu-id="703e6-200">Get-UICulture</span><span class="sxs-lookup"><span data-stu-id="703e6-200">Get-UICulture</span></span>](Get-UICulture.md)
<span data-ttu-id="703e6-201">Ruft die aktuellen Einstellungen der Benutzeroberflächen Kultur im Betriebssystem ab.</span><span class="sxs-lookup"><span data-stu-id="703e6-201">Gets the current UI culture settings in the operating system.</span></span>

### [<span data-ttu-id="703e6-202">Get-Unique</span><span class="sxs-lookup"><span data-stu-id="703e6-202">Get-Unique</span></span>](Get-Unique.md)
<span data-ttu-id="703e6-203">Gibt eindeutige Elemente aus einer sortierten Liste zurück.</span><span class="sxs-lookup"><span data-stu-id="703e6-203">Returns unique items from a sorted list.</span></span>

### [<span data-ttu-id="703e6-204">Get-Uptime</span><span class="sxs-lookup"><span data-stu-id="703e6-204">Get-Uptime</span></span>](Get-Uptime.md)
<span data-ttu-id="703e6-205">Zeitspanne **seit dem letzten** Start starten.</span><span class="sxs-lookup"><span data-stu-id="703e6-205">Get the **TimeSpan** since last boot.</span></span>

### [<span data-ttu-id="703e6-206">Get-Variable</span><span class="sxs-lookup"><span data-stu-id="703e6-206">Get-Variable</span></span>](Get-Variable.md)
<span data-ttu-id="703e6-207">Ruft die Variablen in der aktuellen Konsole ab.</span><span class="sxs-lookup"><span data-stu-id="703e6-207">Gets the variables in the current console.</span></span>

### [<span data-ttu-id="703e6-208">Get-Verb</span><span class="sxs-lookup"><span data-stu-id="703e6-208">Get-Verb</span></span>](Get-Verb.md)
<span data-ttu-id="703e6-209">Ruft genehmigte PowerShell-Verben ab.</span><span class="sxs-lookup"><span data-stu-id="703e6-209">Gets approved PowerShell verbs.</span></span>

### [<span data-ttu-id="703e6-210">Group-Object</span><span class="sxs-lookup"><span data-stu-id="703e6-210">Group-Object</span></span>](Group-Object.md)
<span data-ttu-id="703e6-211">Gruppiert Objekte, die den gleichen Wert für die angegebenen Eigenschaften enthalten.</span><span class="sxs-lookup"><span data-stu-id="703e6-211">Groups objects that contain the same value for specified properties.</span></span>

### [<span data-ttu-id="703e6-212">Import-Alias</span><span class="sxs-lookup"><span data-stu-id="703e6-212">Import-Alias</span></span>](Import-Alias.md)
<span data-ttu-id="703e6-213">Importiert eine Aliasliste aus einer Datei.</span><span class="sxs-lookup"><span data-stu-id="703e6-213">Imports an alias list from a file.</span></span>

### [<span data-ttu-id="703e6-214">Import-Clixml</span><span class="sxs-lookup"><span data-stu-id="703e6-214">Import-Clixml</span></span>](Import-Clixml.md)
<span data-ttu-id="703e6-215">Importiert eine CliXML-Datei und erstellt entsprechende Objekte in PowerShell.</span><span class="sxs-lookup"><span data-stu-id="703e6-215">Imports a CLIXML file and creates corresponding objects in PowerShell.</span></span>

### [<span data-ttu-id="703e6-216">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="703e6-216">Import-Csv</span></span>](Import-Csv.md)
<span data-ttu-id="703e6-217">Erstellt Tabellen ähnliche benutzerdefinierte Objekte aus den Elementen in einer CSV-Datei (Comma-Separated Value, Komma getrennte Werte).</span><span class="sxs-lookup"><span data-stu-id="703e6-217">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

### [<span data-ttu-id="703e6-218">Import-LocalizedData</span><span class="sxs-lookup"><span data-stu-id="703e6-218">Import-LocalizedData</span></span>](Import-LocalizedData.md)
<span data-ttu-id="703e6-219">Importiert sprachspezifische Daten in Skripts und Funktionen, basierend auf der Benutzeroberflächenkultur, die für das Betriebssystem ausgewählt ist.</span><span class="sxs-lookup"><span data-stu-id="703e6-219">Imports language-specific data into scripts and functions based on the UI culture that is selected for the operating system.</span></span>

### [<span data-ttu-id="703e6-220">Import-PowerShellDataFile</span><span class="sxs-lookup"><span data-stu-id="703e6-220">Import-PowerShellDataFile</span></span>](Import-PowerShellDataFile.md)
<span data-ttu-id="703e6-221">Importiert Werte aus einer `.PSD1` Datei, ohne ihren Inhalt aufzurufen.</span><span class="sxs-lookup"><span data-stu-id="703e6-221">Imports values from a `.PSD1` file without invoking its contents.</span></span>

### [<span data-ttu-id="703e6-222">Import-PSSession</span><span class="sxs-lookup"><span data-stu-id="703e6-222">Import-PSSession</span></span>](Import-PSSession.md)
<span data-ttu-id="703e6-223">Importiert Befehle aus einer anderen Sitzung in die aktuelle Sitzung.</span><span class="sxs-lookup"><span data-stu-id="703e6-223">Imports commands from another session into the current session.</span></span>

### [<span data-ttu-id="703e6-224">Invoke-Expression</span><span class="sxs-lookup"><span data-stu-id="703e6-224">Invoke-Expression</span></span>](Invoke-Expression.md)
<span data-ttu-id="703e6-225">Führt Befehle oder Ausdrücke auf dem lokalen Computer aus.</span><span class="sxs-lookup"><span data-stu-id="703e6-225">Runs commands or expressions on the local computer.</span></span>

### [<span data-ttu-id="703e6-226">Invoke-RestMethod</span><span class="sxs-lookup"><span data-stu-id="703e6-226">Invoke-RestMethod</span></span>](Invoke-RestMethod.md)
<span data-ttu-id="703e6-227">Sendet eine HTTP- oder HTTPS-Anforderung an einen RESTful-Webdienst.</span><span class="sxs-lookup"><span data-stu-id="703e6-227">Sends an HTTP or HTTPS request to a RESTful web service.</span></span>

### [<span data-ttu-id="703e6-228">Invoke-WebRequest</span><span class="sxs-lookup"><span data-stu-id="703e6-228">Invoke-WebRequest</span></span>](Invoke-WebRequest.md)
<span data-ttu-id="703e6-229">Ruft Inhalte von einer Webseite im Internet ab.</span><span class="sxs-lookup"><span data-stu-id="703e6-229">Gets content from a web page on the internet.</span></span>

### [<span data-ttu-id="703e6-230">Join-String</span><span class="sxs-lookup"><span data-stu-id="703e6-230">Join-String</span></span>](Join-String.md)
<span data-ttu-id="703e6-231">Kombiniert Objekte aus der Pipeline zu einer einzelnen Zeichenfolge.</span><span class="sxs-lookup"><span data-stu-id="703e6-231">Combines objects from the pipeline into a single string.</span></span>

### [<span data-ttu-id="703e6-232">Measure-Command</span><span class="sxs-lookup"><span data-stu-id="703e6-232">Measure-Command</span></span>](Measure-Command.md)
<span data-ttu-id="703e6-233">Misst die Ausführungszeit von Skriptblöcken und Cmdlets.</span><span class="sxs-lookup"><span data-stu-id="703e6-233">Measures the time it takes to run script blocks and cmdlets.</span></span>

### [<span data-ttu-id="703e6-234">Measure-Object</span><span class="sxs-lookup"><span data-stu-id="703e6-234">Measure-Object</span></span>](Measure-Object.md)
<span data-ttu-id="703e6-235">Berechnet die numerischen Eigenschaften von Objekten und die Zeichen, Wörter und Zeilen in Zeichenfolgenobjekten, z. B. Textdateien.</span><span class="sxs-lookup"><span data-stu-id="703e6-235">Calculates the numeric properties of objects, and the characters, words, and lines in string objects, such as files of text.</span></span>

### [<span data-ttu-id="703e6-236">New-Alias</span><span class="sxs-lookup"><span data-stu-id="703e6-236">New-Alias</span></span>](New-Alias.md)
<span data-ttu-id="703e6-237">Erstellt einen neuen Alias.</span><span class="sxs-lookup"><span data-stu-id="703e6-237">Creates a new alias.</span></span>

### [<span data-ttu-id="703e6-238">New-Event</span><span class="sxs-lookup"><span data-stu-id="703e6-238">New-Event</span></span>](New-Event.md)
<span data-ttu-id="703e6-239">Erstellt ein neues Ereignis.</span><span class="sxs-lookup"><span data-stu-id="703e6-239">Creates a new event.</span></span>

### [<span data-ttu-id="703e6-240">New-GUID</span><span class="sxs-lookup"><span data-stu-id="703e6-240">New-Guid</span></span>](New-Guid.md)
<span data-ttu-id="703e6-241">Erstellt eine GUID.</span><span class="sxs-lookup"><span data-stu-id="703e6-241">Creates a GUID.</span></span>

### [<span data-ttu-id="703e6-242">New-Object</span><span class="sxs-lookup"><span data-stu-id="703e6-242">New-Object</span></span>](New-Object.md)
<span data-ttu-id="703e6-243">Erstellt eine Instanz eines Microsoft .NET Framework- oder COM-Objekts.</span><span class="sxs-lookup"><span data-stu-id="703e6-243">Creates an instance of a Microsoft .NET Framework or COM object.</span></span>

### [<span data-ttu-id="703e6-244">New-TemporaryFile</span><span class="sxs-lookup"><span data-stu-id="703e6-244">New-TemporaryFile</span></span>](New-TemporaryFile.md)
<span data-ttu-id="703e6-245">Erstellt eine temporäre Datei.</span><span class="sxs-lookup"><span data-stu-id="703e6-245">Creates a temporary file.</span></span>

### [<span data-ttu-id="703e6-246">New-TimeSpan</span><span class="sxs-lookup"><span data-stu-id="703e6-246">New-TimeSpan</span></span>](New-TimeSpan.md)
<span data-ttu-id="703e6-247">Erstellt ein TimeSpan-Objekt.</span><span class="sxs-lookup"><span data-stu-id="703e6-247">Creates a TimeSpan object.</span></span>

### [<span data-ttu-id="703e6-248">New-Variable</span><span class="sxs-lookup"><span data-stu-id="703e6-248">New-Variable</span></span>](New-Variable.md)
<span data-ttu-id="703e6-249">Erstellt eine neue Variable.</span><span class="sxs-lookup"><span data-stu-id="703e6-249">Creates a new variable.</span></span>

### [<span data-ttu-id="703e6-250">Out-File</span><span class="sxs-lookup"><span data-stu-id="703e6-250">Out-File</span></span>](Out-File.md)
<span data-ttu-id="703e6-251">Sendet die Ausgabe an eine Datei.</span><span class="sxs-lookup"><span data-stu-id="703e6-251">Sends output to a file.</span></span>

### [<span data-ttu-id="703e6-252">Out-GridView</span><span class="sxs-lookup"><span data-stu-id="703e6-252">Out-GridView</span></span>](Out-GridView.md)
<span data-ttu-id="703e6-253">Sendet die Ausgabe an eine interaktive Tabelle in einem separaten Fenster.</span><span class="sxs-lookup"><span data-stu-id="703e6-253">Sends output to an interactive table in a separate window.</span></span>

### [<span data-ttu-id="703e6-254">Out-Printer</span><span class="sxs-lookup"><span data-stu-id="703e6-254">Out-Printer</span></span>](Out-Printer.md)
<span data-ttu-id="703e6-255">Sendet die Ausgabe an einen Drucker.</span><span class="sxs-lookup"><span data-stu-id="703e6-255">Sends output to a printer.</span></span>

### [<span data-ttu-id="703e6-256">Out-String</span><span class="sxs-lookup"><span data-stu-id="703e6-256">Out-String</span></span>](Out-String.md)
<span data-ttu-id="703e6-257">Gibt Eingabe Objekte als Zeichen folgen aus.</span><span class="sxs-lookup"><span data-stu-id="703e6-257">Outputs input objects as a strings.</span></span>

### [<span data-ttu-id="703e6-258">Read-Host</span><span class="sxs-lookup"><span data-stu-id="703e6-258">Read-Host</span></span>](Read-Host.md)
<span data-ttu-id="703e6-259">Liest eine Zeile von Eingabedaten aus der Konsole.</span><span class="sxs-lookup"><span data-stu-id="703e6-259">Reads a line of input from the console.</span></span>

### [<span data-ttu-id="703e6-260">Register-EngineEvent</span><span class="sxs-lookup"><span data-stu-id="703e6-260">Register-EngineEvent</span></span>](Register-EngineEvent.md)
<span data-ttu-id="703e6-261">Abonniert Ereignisse, die von der PowerShell-Engine und vom `New-Event` Cmdlet generiert werden.</span><span class="sxs-lookup"><span data-stu-id="703e6-261">Subscribes to events that are generated by the PowerShell engine and by the `New-Event` cmdlet.</span></span>

### [<span data-ttu-id="703e6-262">Register-ObjectEvent</span><span class="sxs-lookup"><span data-stu-id="703e6-262">Register-ObjectEvent</span></span>](Register-ObjectEvent.md)
<span data-ttu-id="703e6-263">Abonniert die Ereignisse, die von einem Microsoft .NET Framework-Objekt generiert werden.</span><span class="sxs-lookup"><span data-stu-id="703e6-263">Subscribes to the events that are generated by a Microsoft .NET Framework object.</span></span>

### [<span data-ttu-id="703e6-264">Remove-Alias</span><span class="sxs-lookup"><span data-stu-id="703e6-264">Remove-Alias</span></span>](Remove-Alias.md)
<span data-ttu-id="703e6-265">Entfernt einen Alias aus der aktuellen Sitzung.</span><span class="sxs-lookup"><span data-stu-id="703e6-265">Remove an alias from the current session.</span></span>

### [<span data-ttu-id="703e6-266">Remove-Event</span><span class="sxs-lookup"><span data-stu-id="703e6-266">Remove-Event</span></span>](Remove-Event.md)
<span data-ttu-id="703e6-267">Löscht Ereignisse aus der Ereigniswarteschlange.</span><span class="sxs-lookup"><span data-stu-id="703e6-267">Deletes events from the event queue.</span></span>

### [<span data-ttu-id="703e6-268">Remove-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="703e6-268">Remove-PSBreakpoint</span></span>](Remove-PSBreakpoint.md)
<span data-ttu-id="703e6-269">Löscht Haltepunkte aus der aktuellen Konsole.</span><span class="sxs-lookup"><span data-stu-id="703e6-269">Deletes breakpoints from the current console.</span></span>

### [<span data-ttu-id="703e6-270">Remove-TypeData</span><span class="sxs-lookup"><span data-stu-id="703e6-270">Remove-TypeData</span></span>](Remove-TypeData.md)
<span data-ttu-id="703e6-271">Löscht erweiterte Typen aus der aktuellen Sitzung.</span><span class="sxs-lookup"><span data-stu-id="703e6-271">Deletes extended types from the current session.</span></span>

### [<span data-ttu-id="703e6-272">Remove-Variable</span><span class="sxs-lookup"><span data-stu-id="703e6-272">Remove-Variable</span></span>](Remove-Variable.md)
<span data-ttu-id="703e6-273">Löscht eine Variable und ihren Wert.</span><span class="sxs-lookup"><span data-stu-id="703e6-273">Deletes a variable and its value.</span></span>

### [<span data-ttu-id="703e6-274">Select-Object</span><span class="sxs-lookup"><span data-stu-id="703e6-274">Select-Object</span></span>](Select-Object.md)
<span data-ttu-id="703e6-275">Wählt Objekte oder Objekteigenschaften.</span><span class="sxs-lookup"><span data-stu-id="703e6-275">Selects objects or object properties.</span></span>

### [<span data-ttu-id="703e6-276">Select-String</span><span class="sxs-lookup"><span data-stu-id="703e6-276">Select-String</span></span>](Select-String.md)
<span data-ttu-id="703e6-277">Sucht nach Text in Dateien und Zeichenfolgen.</span><span class="sxs-lookup"><span data-stu-id="703e6-277">Finds text in strings and files.</span></span>

### [<span data-ttu-id="703e6-278">Select-Xml</span><span class="sxs-lookup"><span data-stu-id="703e6-278">Select-Xml</span></span>](Select-Xml.md)
<span data-ttu-id="703e6-279">Sucht Text in einer XML-Zeichenfolge oder einem XML-Dokument.</span><span class="sxs-lookup"><span data-stu-id="703e6-279">Finds text in an XML string or document.</span></span>

### [<span data-ttu-id="703e6-280">Send-MailMessage</span><span class="sxs-lookup"><span data-stu-id="703e6-280">Send-MailMessage</span></span>](Send-MailMessage.md)
<span data-ttu-id="703e6-281">Sendet eine E-Mail.</span><span class="sxs-lookup"><span data-stu-id="703e6-281">Sends an email message.</span></span>

### [<span data-ttu-id="703e6-282">Set-Alias</span><span class="sxs-lookup"><span data-stu-id="703e6-282">Set-Alias</span></span>](Set-Alias.md)
<span data-ttu-id="703e6-283">Erstellt oder ändert einen Alias für ein Cmdlet oder einen anderen Befehl in der aktuellen PowerShell-Sitzung.</span><span class="sxs-lookup"><span data-stu-id="703e6-283">Creates or changes an alias for a cmdlet or other command in the current PowerShell session.</span></span>

### [<span data-ttu-id="703e6-284">Set-Date</span><span class="sxs-lookup"><span data-stu-id="703e6-284">Set-Date</span></span>](Set-Date.md)
<span data-ttu-id="703e6-285">Ändert die Systemzeit auf dem Computer in eine von Ihnen angegebene Uhrzeit.</span><span class="sxs-lookup"><span data-stu-id="703e6-285">Changes the system time on the computer to a time that you specify.</span></span>

### [<span data-ttu-id="703e6-286">Set-MarkdownOption</span><span class="sxs-lookup"><span data-stu-id="703e6-286">Set-MarkdownOption</span></span>](Set-MarkdownOption.md)
<span data-ttu-id="703e6-287">Legt die Farben und Stile fest, die zum Rendern von markdown-Inhalten in der Konsole verwendet werden.</span><span class="sxs-lookup"><span data-stu-id="703e6-287">Sets the colors and styles used for rendering Markdown content in the console.</span></span>

### [<span data-ttu-id="703e6-288">Set-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="703e6-288">Set-PSBreakpoint</span></span>](Set-PSBreakpoint.md)
<span data-ttu-id="703e6-289">Legt einen Haltepunkt in einer Zeile, einem Befehl oder einer Variable fest.</span><span class="sxs-lookup"><span data-stu-id="703e6-289">Sets a breakpoint on a line, command, or variable.</span></span>

### [<span data-ttu-id="703e6-290">Set-TraceSource</span><span class="sxs-lookup"><span data-stu-id="703e6-290">Set-TraceSource</span></span>](Set-TraceSource.md)
<span data-ttu-id="703e6-291">Konfiguriert, startet und beendet eine Ablauf Verfolgung von PowerShell-Komponenten.</span><span class="sxs-lookup"><span data-stu-id="703e6-291">Configures, starts, and stops a trace of PowerShell components.</span></span>

### [<span data-ttu-id="703e6-292">Set-Variable</span><span class="sxs-lookup"><span data-stu-id="703e6-292">Set-Variable</span></span>](Set-Variable.md)
<span data-ttu-id="703e6-293">Legt den Wert einer Variablen fest.</span><span class="sxs-lookup"><span data-stu-id="703e6-293">Sets the value of a variable.</span></span> <span data-ttu-id="703e6-294">Erstellt die Variable, wenn keine Variable mit dem angeforderten Namen vorhanden ist.</span><span class="sxs-lookup"><span data-stu-id="703e6-294">Creates the variable if one with the requested name does not exist.</span></span>

### [<span data-ttu-id="703e6-295">Show-Command</span><span class="sxs-lookup"><span data-stu-id="703e6-295">Show-Command</span></span>](Show-Command.md)
<span data-ttu-id="703e6-296">Zeigt PowerShell-Befehls Informationen in einem grafischen Fenster an.</span><span class="sxs-lookup"><span data-stu-id="703e6-296">Displays PowerShell command information in a graphical window.</span></span>

### [<span data-ttu-id="703e6-297">Show-Markdown</span><span class="sxs-lookup"><span data-stu-id="703e6-297">Show-Markdown</span></span>](Show-Markdown.md)
<span data-ttu-id="703e6-298">Zeigt eine markdown-Datei oder Zeichenfolge in der Konsole auf benutzerfreundliche Weise mithilfe von VT100-Escapesequenzen oder in einem Browser mit HTML an.</span><span class="sxs-lookup"><span data-stu-id="703e6-298">Shows a Markdown file or string in the console in a friendly way using VT100 escape sequences or in a browser using HTML.</span></span>

### [<span data-ttu-id="703e6-299">Sort-Object</span><span class="sxs-lookup"><span data-stu-id="703e6-299">Sort-Object</span></span>](Sort-Object.md)
<span data-ttu-id="703e6-300">Sortiert Objekte nach Eigenschaftenwerten.</span><span class="sxs-lookup"><span data-stu-id="703e6-300">Sorts objects by property values.</span></span>

### [<span data-ttu-id="703e6-301">Start-Sleep</span><span class="sxs-lookup"><span data-stu-id="703e6-301">Start-Sleep</span></span>](Start-Sleep.md)
<span data-ttu-id="703e6-302">Hält die Aktivität in einem Skript oder einer Sitzung für den angegebenen Zeitraum an.</span><span class="sxs-lookup"><span data-stu-id="703e6-302">Suspends the activity in a script or session for the specified period of time.</span></span>

### [<span data-ttu-id="703e6-303">Tee-Object</span><span class="sxs-lookup"><span data-stu-id="703e6-303">Tee-Object</span></span>](Tee-Object.md)
<span data-ttu-id="703e6-304">Speichert die Ausgabe des Befehls in einer Datei oder einer Variablen, und sendet sie über die Pipeline.</span><span class="sxs-lookup"><span data-stu-id="703e6-304">Saves command output in a file or variable and also sends it down the pipeline.</span></span>

### [<span data-ttu-id="703e6-305">Test-Json</span><span class="sxs-lookup"><span data-stu-id="703e6-305">Test-Json</span></span>](Test-Json.md)
<span data-ttu-id="703e6-306">Testet, ob eine Zeichenfolge ein gültiges JSON-Dokument ist.</span><span class="sxs-lookup"><span data-stu-id="703e6-306">Tests whether a string is a valid JSON document</span></span>

### [<span data-ttu-id="703e6-307">Trace-Command</span><span class="sxs-lookup"><span data-stu-id="703e6-307">Trace-Command</span></span>](Trace-Command.md)
<span data-ttu-id="703e6-308">Konfiguriert und startet eine Ablaufverfolgung des angegebenen Ausdrucks oder Befehls.</span><span class="sxs-lookup"><span data-stu-id="703e6-308">Configures and starts a trace of the specified expression or command.</span></span>

### [<span data-ttu-id="703e6-309">Unblock-File</span><span class="sxs-lookup"><span data-stu-id="703e6-309">Unblock-File</span></span>](Unblock-File.md)
<span data-ttu-id="703e6-310">Hebt die Blockierung von Dateien auf, die aus dem Internet heruntergeladen wurden.</span><span class="sxs-lookup"><span data-stu-id="703e6-310">Unblocks files that were downloaded from the Internet.</span></span>

### [<span data-ttu-id="703e6-311">Unregister-Event</span><span class="sxs-lookup"><span data-stu-id="703e6-311">Unregister-Event</span></span>](Unregister-Event.md)
<span data-ttu-id="703e6-312">Storniert ein Ereignisabonnement.</span><span class="sxs-lookup"><span data-stu-id="703e6-312">Cancels an event subscription.</span></span>

### [<span data-ttu-id="703e6-313">Update-FormatData</span><span class="sxs-lookup"><span data-stu-id="703e6-313">Update-FormatData</span></span>](Update-FormatData.md)
<span data-ttu-id="703e6-314">Aktualisiert die Formatierungsdaten in der aktuellen Sitzung.</span><span class="sxs-lookup"><span data-stu-id="703e6-314">Updates the formatting data in the current session.</span></span>

### [<span data-ttu-id="703e6-315">Update-List</span><span class="sxs-lookup"><span data-stu-id="703e6-315">Update-List</span></span>](Update-List.md)
<span data-ttu-id="703e6-316">Fügt Elemente einem Eigenschaftenwert hinzu, der eine Auflistung von Objekten enthält, bzw. entfernt sie daraus.</span><span class="sxs-lookup"><span data-stu-id="703e6-316">Adds items to and removes items from a property value that contains a collection of objects.</span></span>

### [<span data-ttu-id="703e6-317">Update-TypeData</span><span class="sxs-lookup"><span data-stu-id="703e6-317">Update-TypeData</span></span>](Update-TypeData.md)
<span data-ttu-id="703e6-318">Aktualisiert die erweiterten Typdaten in der Sitzung.</span><span class="sxs-lookup"><span data-stu-id="703e6-318">Updates the extended type data in the session.</span></span>

### [<span data-ttu-id="703e6-319">Wait-Debugger</span><span class="sxs-lookup"><span data-stu-id="703e6-319">Wait-Debugger</span></span>](Wait-Debugger.md)
<span data-ttu-id="703e6-320">Beendet ein Skript im Debugger, bevor die nächste Anweisung im Skript ausgeführt wird.</span><span class="sxs-lookup"><span data-stu-id="703e6-320">Stops a script in the debugger before running the next statement in the script.</span></span>

### [<span data-ttu-id="703e6-321">Wait-Event</span><span class="sxs-lookup"><span data-stu-id="703e6-321">Wait-Event</span></span>](Wait-Event.md)
<span data-ttu-id="703e6-322">Wartet, bis ein bestimmtes Ereignis ausgelöst wird, bevor die Ausführung fortgesetzt wird.</span><span class="sxs-lookup"><span data-stu-id="703e6-322">Waits until a particular event is raised before continuing to run.</span></span>

### [<span data-ttu-id="703e6-323">Write-Debug</span><span class="sxs-lookup"><span data-stu-id="703e6-323">Write-Debug</span></span>](Write-Debug.md)
<span data-ttu-id="703e6-324">Schreibt eine Debugmeldung in die Konsole.</span><span class="sxs-lookup"><span data-stu-id="703e6-324">Writes a debug message to the console.</span></span>

### [<span data-ttu-id="703e6-325">Schreibfehler</span><span class="sxs-lookup"><span data-stu-id="703e6-325">Write-Error</span></span>](Write-Error.md)
<span data-ttu-id="703e6-326">Schreibt ein Objekt in den Fehlerdatenstrom.</span><span class="sxs-lookup"><span data-stu-id="703e6-326">Writes an object to the error stream.</span></span>

### [<span data-ttu-id="703e6-327">Write-Host</span><span class="sxs-lookup"><span data-stu-id="703e6-327">Write-Host</span></span>](Write-Host.md)
<span data-ttu-id="703e6-328">Schreibt angepasste Ausgabe an einen Host.</span><span class="sxs-lookup"><span data-stu-id="703e6-328">Writes customized output to a host.</span></span>

### [<span data-ttu-id="703e6-329">Write-Information</span><span class="sxs-lookup"><span data-stu-id="703e6-329">Write-Information</span></span>](Write-Information.md)
<span data-ttu-id="703e6-330">Gibt an, wie PowerShell Daten in einem Informationsdaten Strom für einen Befehl verarbeitet.</span><span class="sxs-lookup"><span data-stu-id="703e6-330">Specifies how PowerShell handles information stream data for a command.</span></span>

### [<span data-ttu-id="703e6-331">Write-Output</span><span class="sxs-lookup"><span data-stu-id="703e6-331">Write-Output</span></span>](Write-Output.md)
<span data-ttu-id="703e6-332">Sendet die angegebenen Objekte an den nächsten Befehl in der Pipeline.</span><span class="sxs-lookup"><span data-stu-id="703e6-332">Sends the specified objects to the next command in the pipeline.</span></span> <span data-ttu-id="703e6-333">Wenn der Befehl der letzte Befehl in der Pipeline ist, werden die Objekte in der Konsole angezeigt.</span><span class="sxs-lookup"><span data-stu-id="703e6-333">If the command is the last command in the pipeline, the objects are displayed in the console.</span></span>

### [<span data-ttu-id="703e6-334">Write-Progress</span><span class="sxs-lookup"><span data-stu-id="703e6-334">Write-Progress</span></span>](Write-Progress.md)
<span data-ttu-id="703e6-335">Zeigt eine Statusanzeige in einem PowerShell-Befehlsfenster an.</span><span class="sxs-lookup"><span data-stu-id="703e6-335">Displays a progress bar within a PowerShell command window.</span></span>

### [<span data-ttu-id="703e6-336">Write-Verbose</span><span class="sxs-lookup"><span data-stu-id="703e6-336">Write-Verbose</span></span>](Write-Verbose.md)
<span data-ttu-id="703e6-337">Schreibt Text in den Stream für ausführliche Meldungen.</span><span class="sxs-lookup"><span data-stu-id="703e6-337">Writes text to the verbose message stream.</span></span>

### [<span data-ttu-id="703e6-338">Write-Warning</span><span class="sxs-lookup"><span data-stu-id="703e6-338">Write-Warning</span></span>](Write-Warning.md)
<span data-ttu-id="703e6-339">Schreibt eine Warnmeldung.</span><span class="sxs-lookup"><span data-stu-id="703e6-339">Writes a warning message.</span></span>
